tests/fixtures/invalid/string-no-quotes-number-like.stderr
TOML parse error at line 1, column 10
  |
1 | value=123hello
  |          ^
Unexpected `h`
Expected `#`
